--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,4 +7,6 @@ requires-python = ">=3.10"
 dependencies = [
     "matplotlib>=3.10.7",
     "numpy>=2.2.6",
+    "torch>=2.9.1",
+    "torchvision>=0.24.1",
 ]
